# pool-allocator

./: .gitignore  CMakeLists.txt
includes/: chunk.h  t_pool_allocator.h
src/: main.cpp
